<resources>
    <string name="app_name">NoteApp</string>
    <string name="skip">Пропустить</string>
    <string name="start">Начать работу</string>
    <string name="page_first_text">Очень удобный функционал</string>
    <string name="page_second_text">Быстрый, качественный продукт</string>
    <string name="page_third_text">Куча функций и интересных фишек</string>
    <string name="shared_preferences_name">app-shared-preferences</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Готово">Готово</string>
    <string name="_30">30 мая</string>
    <string name="_15_21">15:21</string>
    <string name="name_et_note">Название заметки:</string>
    <string name="ehuwgdjsdf">Содержание заметки:</string>
    <string name="ykeoiuf">Поиск заметок</string>
    <string name="irugoieuheor">Заметки</string>
    <string name="_11_n_18_13">11 Января \n 18:13</string>
    <string name="note">Note</string>
    <string name="title">Title</string>
</resources>