<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".presentation.ui.fragments.add_note.AddNoteFragment">


    <TextView
        android:id="@+id/text_et_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="20dp"
        android:text="@string/Готово"
        android:textColor="@color/orange"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/ib_et_note_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="22dp"
                android:background="@color/gray"
                android:src="@drawable/shapeshapestrel" />

            <TextView
                android:id="@+id/tv_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/_30"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/_15_21"
                android:textColor="@color/white_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_add_note_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name_et_note"
                android:textColorHint="@color/white_gray" />

            <EditText
                android:id="@+id/et_add_note_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ehuwgdjsdf"
                android:textColorHint="@color/white_gray" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_et_note_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:backgroundTint="@color/gray" />

    <Button
        android:id="@+id/btn_et_note_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="20dp"
        android:backgroundTint="@color/white" />

    <Button
        android:id="@+id/btn_et_note_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:backgroundTint="@color/brown" />
</FrameLayout>